5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1602_825.log
== TEST (2019-03-21 11:23:29) 
-- CODE:
import math
r=float(input("digite o raio"))
area= pi*(r**2)
print(area)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:24:50) 
-- CODE:
import math
r=float(input("digite o raio"))
area= math.pi*(r**2)
print(area)

-- OUTPUT:
63.61725123519331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:26:07) 
-- CODE:
import math
r=float(input("digite o raio"))
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))


-- OUTPUT:
63.617
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:27:34) 
-- CODE:
import math
r=float(input("digite o raio"))
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))
print(round(v,2))

-- EXECUTION TIME:
0.109425
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:27:57) 
-- CODE:
import math
r=float(input("digite o raio"))
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))
print(round(v,2))

-- OUTPUT:
63.617
381.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:28:20) 
-- CODE:
import math
r=float(input("digite o raio"))
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))
print(round(v,2))

-- EXECUTION TIME:
0.12501
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:28:32) 
-- CODE:
import math
r=float(input())
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))
print(round(v,2))

-- OUTPUT:
63.617
381.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:28:47) 
-- CODE:
import math
r=float(input())
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))
print(round(v,2))

-- EXECUTION TIME:
0.126159
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.7
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:28:55) 
-- CODE:
import math
r=float(input())
area= math.pi*(r**2)
v=(4/3)*(math.pi)*(r**3)
print(round(area,3))
print(round(v,3))

-- EXECUTION TIME:
0.195461
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
